force-app/main/default/objects/IntegrationValueMap__c/IntegrationValueMap__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Valor Mapa Integração</label>
</CustomObject>