force-app/main/default/objects/IntegrationValueMap__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <label>ID externo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>