force-app/main/default/objects/IntegrationValueMap__c/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <label>Nome do campo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>