force-app/main/default/objects/IntegrationValueMap__c/fields/TargetValue__c.field-meta.xml
<CustomField>
    <fullName>TargetValue__c</fullName>
    <label>Valor alvo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>